@@ -172,6 +172,12 @@ class JackCoreAudioDriver : public JackAudioDriver
         int Read();
         int Write();
 
+        // BufferSize can be changed
+        bool IsFixedBufferSize()
+        {
+            return false;
+        }
+
         int SetBufferSize(jack_nframes_t buffer_size);
 };
 
