@@ -21,6 +21,10 @@ Romain Moret
   Jackdmp changes log
 ---------------------------
 
+2008-07-03 Stephane Letz  <letz@grame.fr>
+
+	* Add IsFixedBufferSize method in all drivers.
+
 2008-07-02 Stephane Letz  <letz@grame.fr>
 
 	* New netioadapter in server client.
